test/parser/should_succeed/oper2.souc
main() = do
    x <- 4
    x_p <- @x
    print !x_p
