test/parser/should_fail/bindings3.souc
x = 3

main() = do
	x = 4
	print x
